# talk-to-the-bot

./: Dockerfile  README.md  docker-compose.yml
setup_scripts/: talk_to_the_bot_full.bash  talk_to_the_bot_init.bash  talk_to_the_bot_ws.bash
talk_to_the_bot_msgs/: CMakeLists.txt  README.md  package.xml
talk_to_the_bot_msgs/action/: Listen.action
talk_to_the_bot_msgs/srv/: AddPolicy.srv  CodeGen.srv  ControllerCloseHand.srv  ControllerPlan.srv  Detector.srv  GetPolicies.srv  ListenerTranscribe.srv  ObjectLocation.srv
talk_to_the_bot_stt/: README.md  package.xml  setup.cfg  setup.py
talk_to_the_bot_stt/config/: listener_config.json
talk_to_the_bot_stt/talk_to_the_bot_stt/: README.md  listener.py  listener_srv.py  transcriber_srv.py  transcriber_tcp_cli.py  transcriber_tcp_srv.py  wav2vec.py  whisper.py
talk_to_the_bot_tts/: README.md  package.xml  setup.cfg  setup.py
talk_to_the_bot_tts/config/: talker_config.json
talk_to_the_bot_tts/talk_to_the_bot_tts/: README.md  piper_tts.py  simple_tts.py  talker_srv.py
talk_to_the_bot_tts/talk_to_the_bot_tts/voices/: .gitignore
