<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talk_to_the_bot_tts</name>
  <version>0.5.0</version>
  <description>Text to speech</description>
  <maintainer email="ossi.parikka@tuni.fi">parikkao</maintainer>
  <license>GPL-3.0</license>

  <depend>rclpy</depend>
  <depend>talk_to_the_bot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
